Update readme, html and styles

--- a/index.html
+++ b/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Meet landing page</title>
-</head>
-<body>
-  Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <link rel="stylesheet" type="" href="./style.css">
 
-  Download v1.3
-  What is it?
-
-  01
-  Built for modern use
-
-  Smarter meetings, all in one place
-
-  Send messages, share files, show your screen, and record your meetings — all in one 
-  workspace. Control who can join with invite-only team access, data encryption, and data export.
-
-  02
-  Experience more together
-  Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.
-
-  Download v1.3
-</body>
+    <title>Frontend Mentor | Meet landing page</title>
+  </head>
+  <body>
+    <header>
+      <img src="./assets/logo.svg" alt=""> 
+    </header>
+    <main>
+      <img src="./assets/tablet/image-hero.png" alt=""> 
+      <section>
+        <h1>Group Chat for Everyone</h1>
+        <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+        <a href="#">Download v1.3</a>
+        <a href="#">What is it?</a>
+        <div>01</div>
+      </section>
+      <section>
+        <div class="showcase-images">
+          <div class="flex-row">
+            <img src="./assets/desktop/image-woman-in-videocall.jpg" width="256" alt="">
+            <img src="./assets/desktop/image-women-videochatting.jpg" width="256" alt="">
+          </div>
+          <div class="flex-row">
+            <img src="./assets/desktop/image-men-in-meeting.jpg" width="256" alt="">
+            <img src="./assets/desktop/image-man-texting.jpg" width="256" alt="">
+          </div>
+        </div>
+        <div>
+          <p>Built for modern use</p>
+          <h2>Smarter meetings, all in one place</h2>
+          <p>Send messages, share files, show your screen, and record your meetings — all in one workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
+        </div>
+        <div>02</div> 
+      </section>
+    </main>
+    <footer>
+      <h2>Experience more together</h2>
+      <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+      <a href="#">Download v1.3</a>
+    </footer>
+  </body>
 </html>
