--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="./assets/logo.svg" alt=""> 
     </header>
     <main>
-      <img src="./assets/tablet/image-hero.png" alt=""> 
+      <img src="./assets/tablet/image-hero.png" class="m-auto" alt=""> 
       <section>
         <h1 class="text-preset-1 color-slate-900">Group Chat for Everyone</h1>
         <p class="text-preset-4 color-slate-600">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
