HTML restructoring and CSS update

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <main>
       <section>
         <img src="./assets/tablet/image-hero.png" class="m-auto" alt=""> 
-        <h1 class="text-preset-1 color-slate-900">Group Chat for Everyone</h1>
-        <p class="text-preset-4 color-slate-600">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
-        <div class="button-container">
-          <button class="text-preset-5 bg-color-cyan-600 color-white">Download <span class="color-cyan-300">v1.3</span></button>
-          <button class="text-preset-5 bg-color-purple-600 color-white">What is it?</button>
+        <div class="text-container">
+          <h1 class="text-preset-1 color-slate-900">Group Chat<br>for Everyone</h1>
+          <p class="text-preset-4 color-slate-600">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+          <div class="button-container">
+            <button class="text-preset-5 bg-color-cyan-600 color-white">Download <span class="color-cyan-300">v1.3</span></button>
+            <button class="text-preset-5 bg-color-purple-600 color-white">What is it?</button>
+          </div>
         </div>
       </section>
       <section>
@@ -44,9 +46,11 @@
     </main>
     <footer>
       <div>02</div> 
-      <h2 class="text-preset-2">Experience more together</h2>
-      <p class="text-preset-4">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-      <button class="text-preset-5 bg-color-purple-600 color-white">Download <span class="color-purple-300">v1.3</span></button>
+      <div class="text-container">
+        <h2 class="text-preset-2">Experience more together</h2>
+        <p class="text-preset-4">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+        <button class="max-w-content text-preset-5 bg-color-purple-600 color-white">Download <span class="color-purple-300">v1.3</span></button>
+      </div>
     </footer>
   </body>
 </html>
