Cleanup for Tailwind

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <section>
       <img src="./assets/tablet/image-hero.png" class="m-auto" alt="" />
-      <div class="text-container">
+      <div class="">
         <h1 class="text-preset-1 color-slate-900">
           Group Chat for Everyone
         </h1>
@@ -26,7 +26,7 @@
           Meet makes it easy to connect with others face-to-face virtually and
           collaborate across any device.
         </p>
-        <div class="button-container">
+        <div class="">
           <button class="text-preset-5 bg-color-cyan-600 color-white">
             Download <span class="color-cyan-300">v1.3</span>
           </button>
@@ -38,12 +38,12 @@
     </section>
     <section>
       <div class="text-preset-5 color-slate-600">01</div>
-      <div class="showcase-images">
-        <div class="flex-row">
+      <div class="">
+        <div class="">
           <img src="./assets/desktop/image-woman-in-videocall.jpg" width="256" alt="" />
           <img src="./assets/desktop/image-women-videochatting.jpg" width="256" alt="" />
         </div>
-        <div class="flex-row">
+        <div class="">
           <img src="./assets/desktop/image-men-in-meeting.jpg" width="256" alt="" />
           <img src="./assets/desktop/image-man-texting.jpg" width="256" alt="" />
         </div>
@@ -63,13 +63,13 @@
   </main>
   <footer>
     <div>02</div>
-    <div class="text-container">
+    <div class="">
       <h2 class="text-preset-2">Experience more together</h2>
       <p class="text-preset-4">
         Stay connected with reliable HD meetings and unlimited one-on-one and
         group video sessions.
       </p>
-      <button class="max-w-content text-preset-5 bg-color-purple-600 color-white">
+      <button class="text-preset-5 bg-color-purple-600 color-white">
         Download <span class="color-purple-300">v1.3</span>
       </button>
     </div>
