Make style Tailwind compatible

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <title>Frontend Mentor | Meet landing page</title>
 </head>
 
-<body>
+<body class="font-red-hat p-8">
   <header>
     <img src="./assets/logo.svg" alt="" />
   </header>
   <main>
     <section>
-      <img src="./assets/tablet/image-hero.png" class="m-auto" alt="" />
+      <img src="./assets/tablet/image-hero.png" class="" alt="" />
       <div class="">
         <h1 class="text-preset-1 color-slate-900">
           Group Chat for Everyone
