--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body class="font-red-hat p-8">
-  <header>
-    <img src="./assets/logo.svg" alt="" />
+  <header class="flex justify-center">
+    <img class="mt-12 lg:mt-20" src="./assets/logo.svg" alt="" />
   </header>
   <main>
-    <section>
-      <img src="./assets/tablet/image-hero.png" class="" alt="" />
+    <section class="pt-16 pb-8 md:pb-16">
+      <div class="-mx-16"><img src="./assets/tablet/image-hero.png" class="mx-auto mb-12 md:mb-18" alt="" /></div>
       <div class="">
         <h1 class="text-preset-1 color-slate-900">
           Group Chat for Everyone
