Updating color utility classes on html

--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
     <section class="pt-16 pb-8 md:pb-16">
       <div class="-mx-16"><img src="./assets/tablet/image-hero.png" class="mx-auto mb-12 md:mb-18" alt="" /></div>
       <div class="">
-        <h1 class="text-preset-1 color-slate-900">
+        <h1 class="text-preset-1 text-slate-900">
           Group Chat for Everyone
         </h1>
-        <p class="text-preset-4 color-slate-600">
+        <p class="text-preset-4 text-slate-600">
           Meet makes it easy to connect with others face-to-face virtually and
           collaborate across any device.
         </p>
         <div class="">
-          <button class="text-preset-5 bg-color-cyan-600 color-white">
-            Download <span class="color-cyan-300">v1.3</span>
+          <button class="btn text-preset-5 bg-cyan-600 text-white">
+            Download <span class="text-cyan-300">v1.3</span>
           </button>
-          <button class="text-preset-5 bg-color-purple-600 color-white">
+          <button class="btn text-preset-5 bg-purple-600 text-white">
             What is it?
           </button>
         </div>
       </div>
     </section>
     <section>
-      <div class="text-preset-5 color-slate-600">01</div>
+      <div class="text-preset-5 text-slate-600">01</div>
       <div class="">
         <div class="">
           <img src="./assets/desktop/image-woman-in-videocall.jpg" width="256" alt="" />
@@ -49,11 +49,11 @@
         </div>
       </div>
       <div>
-        <p class="text-preset-3 color-cyan-600">Built for modern use</p>
-        <h2 class="text-preset-2 color-slate-900">
+        <p class="text-preset-3 text-cyan-600">Built for modern use</p>
+        <h2 class="text-preset-2 text-slate-900">
           Smarter meetings, all in one place
         </h2>
-        <p class="text-preset-4 color-slate-600">
+        <p class="text-preset-4 text-slate-600">
           Send messages, share files, show your screen, and record your
           meetings — all in one workspace. Control who can join with
           invite-only team access, data encryption, and data export.
@@ -69,8 +69,8 @@
         Stay connected with reliable HD meetings and unlimited one-on-one and
         group video sessions.
       </p>
-      <button class="text-preset-5 bg-color-purple-600 color-white">
-        Download <span class="color-purple-300">v1.3</span>
+      <button class="btn text-preset-5 bg-purple-600 text-white">
+        Download <span class="text-purple-300">v1.3</span>
       </button>
     </div>
   </footer>
