Chage text styles to tailwind components

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
   </header>
   <main>
     <section class="pt-16 pb-8 md:pb-16">
-      <div class="-mx-16"><img src="./assets/tablet/image-hero.png" class="mx-auto mb-12 md:mb-18" alt="" /></div>
-      <div class="">
-        <h1 class="text-preset-1 text-slate-900">
-          Group Chat for Everyone
-        </h1>
+      <div class="-mx-16">
+        <img src="./assets/tablet/image-hero.png" class="mx-auto mb-12 md:mb-18" alt="" />
+      </div>
+      <div>
+        <h1 class="text-preset-1 text-slate-900">Group Chat for Everyone</h1>
         <p class="text-preset-4 text-slate-600">
           Meet makes it easy to connect with others face-to-face virtually and
-          collaborate across any device.
-        </p>
+          collaborate across any device.</p>
         <div class="">
           <button class="btn text-preset-5 bg-cyan-600 text-white">
             Download <span class="text-cyan-300">v1.3</span>
@@ -62,7 +61,7 @@
     </section>
   </main>
   <footer>
-    <div>02</div>
+    <div class="text-preset-5">02</div>
     <div class="">
       <h2 class="text-preset-2">Experience more together</h2>
       <p class="text-preset-4">
