Layout and readme update

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
   </header>
   <main>
     <section class="pt-16 pb-8 md:pb-16">
-      <div class="-mx-16">
+      <div class="">
         <img src="./assets/tablet/image-hero.png" class="mx-auto mb-12 md:mb-18" alt="" />
       </div>
-      <div>
+      <div class="flex flex-col justify-center gap-6">
         <h1 class="text-preset-1 text-slate-900">Group Chat for Everyone</h1>
         <p class="text-preset-4 text-slate-600">
           Meet makes it easy to connect with others face-to-face virtually and
           collaborate across any device.</p>
-        <div class="">
+        <div class="flex flex-wrap justify-center gap-4">
           <button class="btn text-preset-5 bg-cyan-600 text-white">
             Download <span class="text-cyan-300">v1.3</span>
           </button>
@@ -37,14 +37,18 @@
     </section>
     <section>
       <div class="text-preset-5 text-slate-600">01</div>
-      <div class="">
-        <div class="">
-          <img src="./assets/desktop/image-woman-in-videocall.jpg" width="256" alt="" />
-          <img src="./assets/desktop/image-women-videochatting.jpg" width="256" alt="" />
+      <div class="flex flex-wrap justify-center gap-4 md:gap-6 lg:gap-8">
+        <div class="flex flex-row gap-4 md:gap-6 lg:gap-8">
+          <img class="max-w-full h-auto shrink min-w-0 rounded-lg" src="./assets/desktop/image-woman-in-videocall.jpg"
+            width="256" alt="" />
+          <img class="max-w-full h-auto shrink min-w-0 rounded-lg" src="./assets/desktop/image-women-videochatting.jpg"
+            width="256" alt="" />
         </div>
-        <div class="">
-          <img src="./assets/desktop/image-men-in-meeting.jpg" width="256" alt="" />
-          <img src="./assets/desktop/image-man-texting.jpg" width="256" alt="" />
+        <div class="flex flex-row gap-4 md:gap-6 lg:gap-8">
+          <img class="max-w-full h-auto shrink min-w-0 rounded-lg" src="./assets/desktop/image-men-in-meeting.jpg"
+            width="256" alt="" />
+          <img class="max-w-full h-auto shrink min-w-0 rounded-lg" src="./assets/desktop/image-man-texting.jpg"
+            width="256" alt="" />
         </div>
       </div>
       <div>
