--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="flex flex-col items-center pt-8 md:pt-14 pb-14 lg:mb-16">
       <div class="text-preset-5 text-slate-600">01</div>
-      <div class="flex flex-wrap justify-center gap-4 md:gap-6 lg:gap-8">
+      <div class="flex flex-wrap justify-center gap-4 md:gap-6 lg:gap-8 my-16">
         <div class="flex flex-row gap-4 md:gap-6 lg:gap-8">
           <img class="max-w-full h-auto shrink min-w-0 rounded-lg" src="./assets/desktop/image-woman-in-videocall.jpg"
             width="256" alt="" />
@@ -51,9 +51,9 @@
             width="256" alt="" />
         </div>
       </div>
-      <div>
-        <p class="text-preset-3 text-cyan-600">Built for modern use</p>
-        <h2 class="text-preset-2 text-slate-900">
+      <div class="max-w-xl">
+        <p class="mb-4 text-preset-3 text-cyan-600">Built for modern use</p>
+        <h2 class="mb-8 text-preset-2 text-slate-900">
           Smarter meetings, all in one place
         </h2>
         <p class="text-preset-4 text-slate-600">
@@ -64,11 +64,11 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="flex flex-col items-center">
     <div class="text-preset-5">02</div>
-    <div class="">
-      <h2 class="text-preset-2">Experience more together</h2>
-      <p class="text-preset-4">
+    <div class="flex flex-col gap-6 lg:flex-row items-center">
+      <h2 class="text-preset-2 lg:text-left">Experience more together</h2>
+      <p class="text-preset-4 lg:text-left">
         Stay connected with reliable HD meetings and unlimited one-on-one and
         group video sessions.
       </p>
